# AlarcaDir

./: README.md  README_ZH.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  watcher.rs
src-tauri/src/scanner/: basic.rs  mod.rs  ntfs.rs  types.rs
src/components/: AdminAlert.tsx  DuplicatesPage.tsx  DuplicatesTab.tsx  FileTypeDistribution.tsx  TopFilesPanel.tsx  TreemapChart.tsx
